The method filteredByCyclesOptional2 has been implemented using recursion.